--- a/src/chat/_messages.scss
+++ b/src/chat/_messages.scss
@@ -51,7 +51,7 @@
 				}
 			}
 		}
-		& + .message-2qnXI6:not(.groupStart-23k01U) {
+		&.cozy-3raOZG:not(.groupStart-23k01U) {
 			margin-top: calc(var(--spacing) / -1);
 			padding-top: 0;
 		}
